--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
  <head>
-  <title>3D-Modell-Test</title>
+  <title>3D Model Viewer Test</title>
   <script src="js/three.min.js" type="text/javascript"></script>
   <script src="js/Detector.js" type="text/javascript"></script>
   <script src="js/ColladaLoader.js" type="text/javascript"></script>
@@ -30,19 +30,6 @@ html, body {
  <body>
   <div id="3dmodell"></div>
   <div id="info">
-   Steuerung der Animation per Tastatur:
-   <dl>
-    <dt>Leertaste</dt>
-    <dd>Pause</dd>
-    <dt>Pfeil links/rechts</dt>
-    <dd>Objekt an der X-Achse drehen</dd>
-    <dt>Pfeil rauf/runter</dt>
-    <dd>Objekt an der Y-Achse drehen</dd>
-    <dt>Bild rauf/runter</dt>
-    <dd>Objekt an der Z-Achse drehen</dd>
-    <dt>Plus/Minus</dt>
-    <dd>Größer/kleiner</dd>
-   </dl>
   </div>
  </body>
 </html>
