--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!doctype html>
 <html>
  <head>
-  <title>3D Model Viewer Test</title>
+  <title>3D Model Test Viewer</title>
   <script src="js/three.min.js" type="text/javascript"></script>
   <script src="js/Detector.js" type="text/javascript"></script>
   <script src="js/ColladaLoader.js" type="text/javascript"></script>
@@ -30,6 +30,19 @@ html, body {
  <body>
   <div id="3dmodell"></div>
   <div id="info">
+   Animation Control
+   <dl>
+    <dt>SpaceBar</dt>
+    <dd>Pause Animation</dd>
+    <dt>Left/Right Arrows</dt>
+    <dd>X-Axis Rotation</dd>
+    <dt>Up/Down Arrows</dt>
+    <dd>Y-Axis Rotation</dd>
+    <dt>Page Up/Down</dt>
+    <dd>Z-Axis Rotation</dd>
+    <dt>Plus/Minus</dt>
+    <dd>Zoom In / Zoom Out</dd>
+   </dl>
   </div>
  </body>
 </html>
